--- a/.env
+++ b/.env
@@ -29,5 +29,7 @@ APP_SECRET=03be4c09b51cb6a33a448720a0e0b599
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7
+DATABASE_URL=mysql://root:@127.0.0.1:3306/DDA-TV?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
+GOOGLE_RECAPTCHA_SITE_KEY=6LdzwusUAAAAAM4Xaz_xiPFSFzp2Q3GIfKCvGZmW
+GOOGLE_RECAPTCHA_PRIVATE_KEY=6LdzwusUAAAAADhUsFGzAUMBk34sEFNyxzT2ISqs
