Système de login/resister

--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ APP_SECRET=03be4c09b51cb6a33a448720a0e0b599
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILER_DSN=null://localhost
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
