--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "symfonycasts/verify-email-bundle": "^1.0"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.3",
         "symfony/debug-pack": "*",
         "symfony/maker-bundle": "^1.19",
         "symfony/profiler-pack": "*",
