--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -1,8 +1,47 @@
 easy_admin:
-   entities:
-       # List the entity class name you want to manage
-       - App\Entity\Movie
-       - App\Entity\Serie
-       - App\Entity\Season
-       - App\Entity\Episode
-       - App\Entity\User
+    formats:
+        date:     'd/m/Y'
+        time:     'H:i:s'
+        datetime: 'd/m/Y H:i:s'
+    site_name: 'Administration Générale'
+    design:
+        form_theme:
+            - "@EasyAdmin/form/bootstrap_4.html.twig"
+        brand_color: 'black'
+        menu:
+            - { label: 'Revenir au site', route: 'home', icon: 'link'}
+            - User
+            # - Movie
+            # - Serie
+            # - Season
+            # - Episode
+    entities:
+        User:
+            class: App\Entity\User
+            controller: App\Controller\AdminController
+            label: 'Utilisateurs'
+            list:
+                title: 'Liste des utilisateurs'
+                sort: ['id', 'ASC']
+                fields:
+                    - {property: 'id', label: 'ID'}
+                    - {property: 'email', type: 'email', label: 'Adresse Email'}
+                    - {property: 'firstname', label: 'Prénom'}
+                    - {property: 'activated', label: 'Email confirmé'}
+                    - {property: 'registrationDate', label: 'Date d''inscription'}
+                    - {property: 'picture',  type: 'image', base_path: 'images/users/', label: 'Photo'}
+            edit:
+                title: 'Modifier un utilisateur'
+                fields:
+                    - {property: 'email', type: 'email', label: 'Adresse Email'}
+                    - {property: 'plainPassword', type: 'password', label: 'Mot de passe'}
+                    - {property: 'firstname', label: 'firstname'}
+                    - {property: 'activated', label: 'Email confirmé'}
+            new:
+                title: 'Créer un nouveau compte'
+                fields:
+                    - {property: 'email', type: 'email', label: 'Adresse Email'}
+                    - {property: 'plainPassword', type: 'password', label: 'Mot de passe'}
+                    - {property: 'firstname', label: 'firstname'}
+                    - {property: 'activated', label: 'Email confirmé'}
+        
