--- a/.env
+++ b/.env
@@ -33,3 +33,6 @@ DATABASE_URL=mysql://root:@127.0.0.1:3306/DDA-TV?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
 GOOGLE_RECAPTCHA_SITE_KEY=6LdzwusUAAAAAM4Xaz_xiPFSFzp2Q3GIfKCvGZmW
 GOOGLE_RECAPTCHA_PRIVATE_KEY=6LdzwusUAAAAADhUsFGzAUMBk34sEFNyxzT2ISqs
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN=^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$
+###< nelmio/cors-bundle ###
